<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/endGameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".EndGameScreen">

    <Button
        android:id="@+id/backOverButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/electrolize"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingTop="25dp">

        <TextView
            android:id="@+id/gameOverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/electrolize"
            android:text="@string/gameOver"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="5sp">

        <TextView
            android:id="@+id/scoreOverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/electrolize"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pointsOverLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/levelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/electrolize"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/usernameInput"
            style="@android:style/Widget.Holo.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:fontFamily="@font/electrolize"
            android:hint="@string/typeName"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textSize="24sp"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/sendButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/electrolize"
            android:text="@string/saveScore"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:visibility="invisible" />
    </LinearLayout>
</LinearLayout>